syntax = "proto3";

package auction_api;

import "google/api/annotations.proto";

option go_package = "github.com/students-api/bidding-service/internal/pb/auction_api";

service AuctionService {
  rpc CreateAuction(CreateAuctionRequest) returns (CreateAuctionResponse) {
    option (google.api.http) = {
      post: "/v1/auctions"
      body: "*"
    };
  }
  
  rpc ListAuctions(ListAuctionsRequest) returns (ListAuctionsResponse) {
     option (google.api.http) = {
      get: "/v1/auctions"
    };
  }
}

message CreateAuctionRequest {
  int64 object_id = 1; 
  int64 start_price = 2;
}

message CreateAuctionResponse {
  int64 auction_id = 1;
  string title = 2;
  string artist = 3;
  string image_url = 4;
}

message ListAuctionsRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message Auction {
  int64 id = 1;
  string title = 2;
  string artist = 3;
  int64 current_price = 4;
  string image_url = 5;
}

message ListAuctionsResponse {
  repeated Auction auctions = 1;
}